# nubia-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
example/: nubia_example.py
example/commands/: sample_commands.py
nubia/: __init__.py
nubia/internal/: cmdbase.py  cmdloader.py  completion.py  context.py  exceptions.py  helpers.py  options.py  parser.py  registry.py  registry_tools.py
nubia/internal/commands/: builtin.py
nubia/internal/io/: eventbus.py
nubia/internal/typing/: __init__.py  argparse.py  builder.py  inspect.py
tests/: commands_test.py  integration_pattern_test.py  pattern_matching_test.py  test_commands.py  test_helpers.py  test_read_stdin.py  test_supercommands.py
