# Copyright (c) Facebook, Inc. and its affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "nubia-cli"
version = "0.2.5"
description = "A fork of Meta's nubia, a framework for building beautiful shells."
authors = ["Ahmed Soliman <asoli@fb.com>", "Andreas Backx <andreasbackx@fb.com>",
           "Stardust Systems Dev Team"]
license = "BSD"
packages = [
  { include = "nubia" }
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
jellyfish = "~1.0"
prettytable = "^2.4.0"
prompt-toolkit = "^3.0.23"
Pygments = "^2.10.0"
pyparsing = "~3.1"
termcolor = "^1.1.0"
typing-inspect = "^0.7.1"
wcwidth = "^0.2.5"

[tool.poetry.dev-dependencies]
codecov = "*"
nose = "^1.3.7"
pre-commit = "^2.16.0"
black = "~23"
importmagic = "^0.1.7"
pylint = "^3.0"
later = "~23.11"
flake8 = "~6.1"
jedi = "^0.19"
rope = "~1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
